tests/macros/plugin/filter.stderr
error: option `filter` does not exist for kind `plugin`
 --> $DIR/filter.rs:2:44
  |
2 |     let q = discourse::questions![Plugin { filter: todo!() }];
  |                                            ^^^^^^
