tests/macros/plugin/filter.rs
fn main() {
    let q = discourse::questions![Plugin { filter: todo!() }];
}
